--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en-US">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Kamogelo Matsetela WDD 130 course home page. Learn about my journey in web development.">
+    <meta name="author" content="Kamogelo Matsetela">
     <title>Kamogelo Matsetela | WDD 130</title>
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
     <header>
@@ -17,6 +20,11 @@
       <img src="images/profile.jpg" alt="Hello, my name is Kamogelo Matsetela" width="200">
       <p>Hello! I am Kamogelo Matsetela from Roodepoort, South Africa. I'm studying web development through BYU-Idaho and I love helping people and building creative digital projects. In my free time, I enjoy learning, serving, and spending time with loved ones.</p>
     </main>
+    <aside>
+      <h2>South Africa</h2>
+      <img src="images/south_africa.jpg" alt="Landscape of South Africa">
+      <p>South Africa is a beautiful and diverse country at the southern tip of Africa, known for its landscapes, culture, and history. It is home to multiple languages and people, and is a popular destination for nature and adventure lovers.</p>
+    </aside>
     <footer>
       <p>&copy;2025 🌍 Kamogelo Matsetela 🌍 South Africa</p>
     </footer>
