--- a/wwr/about.html
+++ b/wwr/about.html
@@ -2,19 +2,21 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Learn more about Wild Water Rafting, our history, mission, and exciting adventures on the river." />
+  <meta name="author" content="Kamogelo Matsetela" />
   <title>About Us - Wild Water Rafting</title>
   <link rel="stylesheet" href="styles/rafting.css" />
 </head>
 <body>
   <header>
-    <img src="images/logo.png" alt="Wild Water Rafting Logo" class="logo">
+    <img src="images/logo.png" alt="Wild Water Rafting Logo" class="logo" />
     <nav>
       <ul>
-        <li><a href="#">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About Us</a></li>
-        <li><a href="#">Trips</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="trips.html">Trips</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
@@ -34,10 +36,13 @@
 
     <section class="adventure">
       <h2>What We Do</h2>
-      <div class="adventure-images">
+      <div class="image-grid">
         <img src="images/rafting1.jpg" alt="Rafting action" />
         <img src="images/rafting22.jpg" alt="White water rapids" />
         <img src="images/rafting23.jpg" alt="Group enjoying rafting" />
+        <img src="images/rafting2.jpg" alt="Exciting water challenge" />
+        <img src="images/rafting5.jpg" alt="Team rafting together" />
+        <img src="images/rafting6.jpg" alt="Nature and water view" />
       </div>
       <p>
         From beginner-friendly rafting to extreme white water challenges, we offer adventures tailored to all levels of experience. Our expert guides, top-notch gear, and passion for safety ensure an exhilarating yet secure journey down the river.
@@ -55,9 +60,9 @@
   <footer>
     <p>&copy; 2025 Wild Water Rafting | Created by Kamogelo Matsetela</p>
     <div class="social-icons">
-      <a href="#"><img src="images/facebook.webp" alt="Facebook"></a>
-      <a href="#"><img src="images/X-64.webp" alt="X"></a>
-      <a href="#"><img src="images/instagram.webp" alt="Instagram"></a>
+      <a href="#"><img src="images/facebook.webp" alt="Facebook" /></a>
+      <a href="#"><img src="images/X-64.webp" alt="X" /></a>
+      <a href="#"><img src="images/instagram.webp" alt="Instagram" /></a>
     </div>
   </footer>
 </body>
