--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,67 +3,61 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Learn more about Wild Water Rafting, our history, mission, and exciting adventures on the river." />
-  <meta name="author" content="Kamogelo Matsetela" />
-  <title>About Us - Wild Water Rafting</title>
+  <title>White Water Wonders | About Us</title>
+
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Playfair+Display&display=swap" rel="stylesheet">
+
+  <!-- CSS -->
   <link rel="stylesheet" href="styles/rafting.css" />
 </head>
 <body>
   <header>
-    <img src="images/logo.png" alt="Wild Water Rafting Logo" class="logo" />
+    <img src="images/logo.png" alt="White Water Wonders Logo" />
     <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About Us</a></li>
-        <li><a href="trips.html">Trips</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
+      <a href="index.html">Home</a>
+      <a href="about.html">About Us</a>
+      <a href="trips.html">Trips</a>
+      <a href="contact.html">Contact</a>
     </nav>
   </header>
 
   <main>
-    <section class="hero">
+    <div class="hero">
       <img src="images/hero.jpg" alt="Rafting Adventure" />
-      <h1>About Us</h1>
-    </section>
+      <h1>White Water Wonders</h1>
+      <article>
+        <img src="images/rafting23.jpg" alt="Rafting team" />
+        <p>
+          Experience the thrill and beauty of nature like never before. Our expert guides
+          ensure every trip is safe, scenic, and unforgettable.
+        </p>
+      </article>
+    </div>
 
     <section class="history">
       <h2>Our History</h2>
       <p>
-        Wild Water Rafting was founded in 2010 with the goal of creating unforgettable adventures on some of the most scenic rivers in the world. We started as a small group of outdoor enthusiasts and quickly grew into a full-service rafting company, trusted by thrill-seekers and families alike.
+        Since 1998, White Water Wonders has helped thousands conquer rivers with passion, precision, and unforgettable experiences.
+        We believe in blending adrenaline with safety to bring you the best rafting trips possible.
       </p>
     </section>
 
     <section class="adventure">
-      <h2>What We Do</h2>
-      <div class="image-grid">
-        <img src="images/rafting1.jpg" alt="Rafting action" />
-        <img src="images/rafting22.jpg" alt="White water rapids" />
-        <img src="images/rafting23.jpg" alt="Group enjoying rafting" />
-        <img src="images/rafting2.jpg" alt="Exciting water challenge" />
-        <img src="images/rafting5.jpg" alt="Team rafting together" />
-        <img src="images/rafting6.jpg" alt="Nature and water view" />
-      </div>
-      <p>
-        From beginner-friendly rafting to extreme white water challenges, we offer adventures tailored to all levels of experience. Our expert guides, top-notch gear, and passion for safety ensure an exhilarating yet secure journey down the river.
-      </p>
-    </section>
-
-    <section class="mission">
-      <h2>Our Mission</h2>
-      <p>
-        To connect people to nature through unforgettable rafting experiences while promoting environmental sustainability and river conservation.
-      </p>
+      <h2>Adventure Awaits You!</h2>
+      <img src="images/rafting1.jpg" alt="Rafting 1" />
+      <img src="images/rafting2.jpg" alt="Rafting 2" />
+      <img src="images/rafting3.jpg" alt="Rafting 3" />
+      <img src="images/rafting5.jpg" alt="Rafting 4" />
+      <img src="images/rafting22.jpg" alt="Rafting 5" />
     </section>
   </main>
 
   <footer>
-    <p>&copy; 2025 Wild Water Rafting | Created by Kamogelo Matsetela</p>
-    <div class="social-icons">
-      <a href="#"><img src="images/facebook.webp" alt="Facebook" /></a>
-      <a href="#"><img src="images/X-64.webp" alt="X" /></a>
-      <a href="#"><img src="images/instagram.webp" alt="Instagram" /></a>
-    </div>
+    <p>© 2025 White Water Wonders | Kamogelo Matsetela</p>
+    <a href="#"><img src="images/facebook.webp" alt="Facebook icon" /></a>
+    <a href="#"><img src="images/X-64.webp" alt="Twitter icon" /></a>
+    <a href="#"><img src="images/instagram.webp" alt="Instagram icon" /></a>
   </footer>
 </body>
 </html>
