--- a/wwr/about.html
+++ b/wwr/about.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -35,22 +35,47 @@
       </article>
     </div>
 
+    <!-- HISTORY SECTION -->
     <section class="history">
-      <h2>Our History</h2>
-      <p>
-        Since 1998, White Water Wonders has helped thousands conquer rivers with passion, precision, and unforgettable experiences.
-        We believe in blending adrenaline with safety to bring you the best rafting trips possible.
-      </p>
+      <h2>History</h2>
+      <div class="history-content">
+        <p>
+          White Water Wonders was founded in 2005 by a group of passionate river explorers who wanted to share their love for white-water rafting with the world. What started as a small operation along the Colorado River has grown into one of the most trusted rafting companies in the country.
+        </p>
+        <img src="images/rafting6.jpg" alt="Founders' first expedition" />
+        <p>
+          Over the years, we’ve guided thousands of adventurers through some of the most breathtaking rapids and scenic routes across the United States. Our commitment to safety, fun, and sustainability continues to drive our mission to make every trip a memory of a lifetime.
+        </p>
+      </div>
     </section>
 
-    <section class="adventure">
-      <h2>Adventure Awaits You!</h2>
-      <img src="images/rafting1.jpg" alt="Rafting 1" />
-      <img src="images/rafting2.jpg" alt="Rafting 2" />
-      <img src="images/rafting3.jpg" alt="Rafting 3" />
-      <img src="images/rafting5.jpg" alt="Rafting 4" />
-      <img src="images/rafting22.jpg" alt="Rafting 5" />
-    </section>
+   <!-- ADVENTURE SECTION -->
+<section class="adventure">
+  <h2>Adventure Awaits You!</h2>
+  <div class="adventure-grid">
+    <div class="adventure-item">
+      <img src="images/rafting1.jpg" alt="Family rafting experience" />
+      <p>Big splashes and big smiles – this is what fun on the river looks like!</p>
+    </div>
+    <div class="adventure-item">
+      <img src="images/rafting2.jpg" alt="Guided rafting tour" />
+      <p>Hold tight! The crew tackles the rapids with teamwork and adrenaline.</p>
+    </div>
+    <div class="adventure-item">
+      <img src="images/rafting3.jpg" alt="Team building trip" />
+      <p>Paddles up! An action-packed ride through rushing white waters.</p>
+    </div>
+    <div class="adventure-item">
+      <img src="images/rafting5.jpg" alt="High adrenaline rapid" />
+      <p>Every drop and twist brings laughter, splashes, and pure thrill.</p>
+    </div>
+    <div class="adventure-item">
+      <img src="images/rafting22.jpg" alt="Rafting group celebration" />
+      <p>Unforgettable moments shared on a wild ride down the river.</p>
+    </div>
+  </div>
+</section>
+
   </main>
 
   <footer>
