--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -23,6 +23,7 @@
   </header>
 
   <main>
+    <!-- Hero Section -->
     <section class="hero">
       <img src="images/hero.jpg" alt="Rafting Adventure" />
       <h1>Contact Us</h1>
@@ -33,24 +34,29 @@
       </article>
     </section>
 
- <!-- inside <section class="history"> -->
-<p>
-  📍 123 Waterfall Road, Krugersdorp, Gauteng, South Africa<br>
-  📞 +27 10 555 1234<br>
-  📧 support@whitewaterwonders.com<br>
-  🕒 Mon–Sat: 8am–6pm
-</p>
+    <!-- Contact Info -->
+    <section class="history">
+      <h2>Contact Information</h2>
+      <p>
+        📍 123 Waterfall Road, Krugersdorp, Gauteng, South Africa<br>
+        📞 +27 10 555 1234<br>
+        📧 support@whitewaterwonders.com<br>
+        🕒 Mon–Sat: 8am–6pm
+      </p>
+    </section>
 
-<!-- inside <section class="adventure"> -->
-<iframe 
-  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11443.021576570005!2d27.761181025391926!3d-26.094717151277007!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1e95a4e2e5ab13c9%3A0x56b816f0700f8c5e!2sKrugersdorp%2C%20South%20Africa!5e0!3m2!1sen!2sza!4v1717328800000!5m2!1sen!2sza" 
-  width="100%" 
-  height="300" 
-  style="border:0; border-radius: 10px;" 
-  allowfullscreen="" 
-  loading="lazy">
-</iframe>
-
+    <!-- Map -->
+    <section class="adventure">
+      <h2>Our Location</h2>
+      <iframe 
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11443.021576570005!2d27.761181025391926!3d-26.094717151277007!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1e95a4e2e5ab13c9%3A0x56b816f0700f8c5e!2sKrugersdorp%2C%20South%20Africa!5e0!3m2!1sen!2sza!4v1717328800000!5m2!1sen!2sza" 
+        width="100%" 
+        height="300" 
+        style="border:0; border-radius: 10px;" 
+        allowfullscreen="" 
+        loading="lazy">
+      </iframe>
+    </section>
 
     <!-- Contact Form -->
     <section class="history">
@@ -81,7 +87,7 @@
       </form>
     </section>
 
-    <!-- Happy Employees -->
+    <!-- Employee Team -->
     <section class="adventure">
       <h2>Meet Our Happy Crew</h2>
       <div class="adventure-grid">
@@ -95,11 +101,10 @@
         </div>
         <div class="adventure-item">
           <img src="images/employee1.jpg" alt="Employee on river" />
-          <p>Greg, Guest Relations – always here for you.</p>
+          <p>greg, Guest Relations – always here for you.</p>
         </div>
       </div>
     </section>
-
   </main>
 
   <footer>
