--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -4,12 +4,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>White Water Wonders | Contact Us</title>
+  <meta name="description" content="Contact White Water Wonders for inquiries, bookings, and feedback. Reach us by phone, email, or visit us in Krugersdorp, Gauteng." />
 
   <!-- Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Playfair+Display&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Playfair+Display&display=swap" rel="stylesheet" />
 
   <!-- CSS -->
-  <link rel="stylesheet" href="styles/rafting.css" />
+  <link rel="stylesheet" href="styles/rafting1.css" />
 </head>
 <body>
   <header>
@@ -18,7 +19,7 @@
       <a href="index.html">Home</a>
       <a href="about.html">About Us</a>
       <a href="trips.html">Trips</a>
-      <a href="contact.html">Contact</a>
+      <a href="contact.html" aria-current="page">Contact</a>
     </nav>
   </header>
 
@@ -34,56 +35,72 @@
       </article>
     </section>
 
-    <!-- Contact Info -->
+    <!-- Contact Information -->
     <section class="history">
       <h2>Contact Information</h2>
-      <p>
-        📍 123 Waterfall Road, Krugersdorp, Gauteng, South Africa<br>
-        📞 +27 10 555 1234<br>
-        📧 support@whitewaterwonders.com<br>
+      <address>
+        📍 123 Waterfall Road, Krugersdorp, Gauteng, South Africa<br />
+        📞 <a href="tel:+27105551234">+27 10 555 1234</a><br />
+        📧 <a href="mailto:support@whitewaterwonders.com">support@whitewaterwonders.com</a><br />
         🕒 Mon–Sat: 8am–6pm
-      </p>
+      </address>
     </section>
 
-    <!-- Map -->
+    <!-- Our Location Map -->
     <section class="adventure">
       <h2>Our Location</h2>
-      <iframe 
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11443.021576570005!2d27.761181025391926!3d-26.094717151277007!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1e95a4e2e5ab13c9%3A0x56b816f0700f8c5e!2sKrugersdorp%2C%20South%20Africa!5e0!3m2!1sen!2sza!4v1717328800000!5m2!1sen!2sza" 
-        width="100%" 
-        height="300" 
-        style="border:0; border-radius: 10px;" 
-        allowfullscreen="" 
-        loading="lazy">
-      </iframe>
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11443.021576570005!2d27.761181025391926!3d-26.094717151277007!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1e95a4e2e5ab13c9%3A0x56b816f0700f8c5e!2sKrugersdorp%2C%20South%20Africa!5e0!3m2!1sen!2sza!4v1717328800000!5m2!1sen!2sza"
+        width="100%"
+        height="300"
+        allowfullscreen=""
+        loading="lazy"
+        title="White Water Wonders Location Map"
+        class="map-iframe"
+      ></iframe>
     </section>
 
     <!-- Contact Form -->
     <section class="history">
       <h2>Send Us a Message</h2>
-      <form action="thankyou.html" method="post" style="display: grid; gap: 1rem; max-width: 600px; margin: auto;">
-        <label>
-          Full Name:
-          <input type="text" name="fullname" required>
-        </label>
-        <label>
-          Email:
-          <input type="email" name="email" required>
-        </label>
-        <label>
-          Purpose:
-          <select name="purpose" required>
-            <option value="">-- Please Select --</option>
-            <option value="general">General Inquiry</option>
-            <option value="booking">Booking Request</option>
-            <option value="feedback">Feedback</option>
-          </select>
-        </label>
-        <label>
-          Message:
-          <textarea name="message" rows="5" required></textarea>
-        </label>
-        <button type="submit" style="padding: 0.75rem; background-color: var(--primary-color); color: white; border: none; border-radius: 5px;">Submit</button>
+      <form action="thankyou.html" method="post" class="contact-form" novalidate>
+        <div class="form-group">
+          <label for="fullname">Full Name:</label>
+          <input type="text" id="fullname" name="fullname" required />
+        </div>
+
+        <div class="form-group">
+          <label for="email">Email Address:</label>
+          <input type="email" id="email" name="email" required />
+        </div>
+
+        <fieldset class="form-group">
+          <legend>Purpose:</legend>
+          <div>
+            <input type="radio" id="purpose-general" name="purpose" value="general" required />
+            <label for="purpose-general">General Inquiry</label>
+          </div>
+          <div>
+            <input type="radio" id="purpose-reservation" name="purpose" value="reservation" />
+            <label for="purpose-reservation">Reservation Question</label>
+          </div>
+          <div>
+            <input type="radio" id="purpose-website" name="purpose" value="website" />
+            <label for="purpose-website">Website Suggestion</label>
+          </div>
+        </fieldset>
+
+        <div class="form-group">
+          <label for="message">Message:</label>
+          <textarea id="message" name="message" rows="5" required></textarea>
+        </div>
+
+        <div class="form-group checkbox-group">
+          <input type="checkbox" id="newsletter" name="newsletter" />
+          <label for="newsletter">Subscribe to our newsletter</label>
+        </div>
+
+        <button type="submit" class="submit-btn">Send Message</button>
       </form>
     </section>
 
@@ -92,16 +109,16 @@
       <h2>Meet Our Happy Crew</h2>
       <div class="adventure-grid">
         <div class="adventure-item">
-          <img src="images/employee.jpg" alt="Employee smiling" />
-          <p>Jamie, Lead Guide – 10 years of river wisdom!</p>
+          <img src="images/employee.jpg" alt="Jamie smiling" />
+          <p><strong>Jamie</strong>, Lead Guide – 10 years of river wisdom!</p>
         </div>
         <div class="adventure-item">
-          <img src="images/employeeteam.avif" alt="Employee team photo" />
+          <img src="images/employeeteam.avif" alt="Our team photo" />
           <p>Our team – passionate, certified, and fun!</p>
         </div>
         <div class="adventure-item">
-          <img src="images/employee1.jpg" alt="Employee on river" />
-          <p>greg, Guest Relations – always here for you.</p>
+          <img src="images/employee1.jpg" alt="Greg on river" />
+          <p><strong>Greg</strong>, Guest Relations – always here for you.</p>
         </div>
       </div>
     </section>
@@ -111,7 +128,8 @@
     <p>© 2025 White Water Wonders | Kamogelo Matsetela</p>
     <a href="#"><img src="images/facebook.webp" alt="Facebook icon" /></a>
     <a href="#"><img src="images/X-64.webp" alt="Twitter icon" /></a>
-    <a href="#"><img src="images/instagram.webp" alt="Instagram icon" /></a>
+    <a href="#"><img src="images/instagram.webp" alt="Instagram icon" /></a><br />
+    <a href="images/contact-wireframe.png" target="_blank" rel="noopener noreferrer">View Contact Page Wireframe</a>
   </footer>
 </body>
 </html>
