--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -129,7 +129,7 @@
     <a href="#"><img src="images/facebook.webp" alt="Facebook icon" /></a>
     <a href="#"><img src="images/X-64.webp" alt="Twitter icon" /></a>
     <a href="#"><img src="images/instagram.webp" alt="Instagram icon" /></a><br />
-    <a href="images/contact-wireframe.png" target="_blank" rel="noopener noreferrer">View Contact Page Wireframe</a>
+    <a href="images/wireframe.png" target="_blank" rel="noopener noreferrer">View Contact Page Wireframe</a>
   </footer>
 </body>
 </html>
